# objclint

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  build.sh  install.sh  objclint  setup.sh  syntax.c
docs/: Makefile
docs/source/: conf.py  index.rst  installation.rst  js-api.rst  usage.rst
objclint.xcodeproj/: project.pbxproj
scripts/: build_objclint.sh  install_objclint.sh  setup_llvm.sh  setup_spidermonkey.sh  status.sh
src/: CMakeLists.txt  Makefile  ObjclintCoordinator.h  ObjclintSessionManagerProtocol.h  main.cc  objclint  objclint-dispatcher.py  objclint-makeproject.rb  objclint-xcodebuild  objclint.cc
src/common/: ObjclintIssue.h  ObjclintIssue.m
src/js/: js.h
src/lint-checkers/: lint-check-avoid-get-set-method-names.js  lint-check-avoid-throw.js  lint-check-delegate-property.js  lint-check-disallow-retain-count.js  lint-check-ivars.js  lint-check-method-size.js  lint-check-no-synthesize.js  lint-check-one-class-one-file.js  lint-check-opening-curly-brace.js  lint-check-wrong-locals-names.js
src/objclint/: ClangSpellingLocation.h  ClangSpellingLocation.m  ClangUtils.h  ClangUtils.m  CursorArray.h  CursorArray.m  JSScriptsLoader.h  JSScriptsLoader.m  JSValidatorsRunner.h  JSValidatorsRunner.m  JavaScriptSession.h  JavaScriptSession.m  LintJSValidatorsRuntime.h  LintJSValidatorsRuntime.m  LintJSValidatorsRuntime.mm  ObjclintSession.h  ObjclintSession.m  main.m  objclint  objclint-Prefix.pch
src/objclint-coordinator/: ObjclintCoordinatorImpl.h  ObjclintCoordinatorImpl.m  ObjclintSessionManager.h  ObjclintSessionManager.m  main.m  objclint-coordinator-Prefix.pch
src/objclint-coordinator/categories/: NSUserDefaults+OCL.h  NSUserDefaults+OCL.m
src/objclint-coordinator/report-generators/: ObjclintReportGenerator.h  TextReportGenerator.h  TextReportGenerator.m
src/objclint/clang-api-helpers/: cursor-info-helper.cc  cursor-info-helper.h
src/objclint/clang-js-bindings/: ClangBinding.h  ClangBindings.h  ClangBindingsCollection.h  ClangBindingsCollection.m  CursorBinding.h  CursorBinding.m  DeclarationBinding+Internal.h  DeclarationBinding+Internal.mm  DeclarationBinding+Protected.h  DeclarationBinding+Protected.m  DeclarationBinding+Protected.mm  DeclarationBinding.h  DeclarationBinding.mm  ObjCMethodDeclarationBinding.h  ObjCMethodDeclarationBinding.mm  ObjCPropertyDeclarationBinding.h  ObjCPropertyDeclarationBinding.mm  TokenBinding.h  TokenBinding.m  clang-cpp-api.h  clang-js-utils.c  clang-js-utils.h  clang-utils.c  clang-utils.h
src/objclint/js/: JSEnvironment.h  JSEnvironment.m  JSError.h  JSError.m  JSScriptsLoader.h  JSScriptsLoader.m
src/objclint/lint-bindings/: LintBinding.h  LintBinding.m
(+3 files in other folders)
